# azure-iot-gateway-sdk

./: .gitignore  CMakeLists.txt
bindings/: CMakeLists.txt
bindings/java/: CMakeLists.txt
bindings/java/devdoc/requirements_docs/: java_module_host_hl_requirements.md  java_module_host_manager_requirements.md  java_module_host_requirements.md
bindings/java/gateway-java-binding/src/main/java/com/microsoft/azure/gateway/core/: GatewayModule.java  MessageBus.java
bindings/java/gateway-java-binding/src/main/java/com/microsoft/azure/gateway/messaging/: Message.java
bindings/java/gateway-java-binding/src/test/java/tests/unit/com/microsoft/azure/gateway/core/: GatewayModuleTest.java
bindings/java/gateway-java-binding/src/test/java/tests/unit/com/microsoft/azure/gateway/messaging/: MessageTest.java
bindings/java/inc/: Java_module_host_common.h  java_module_host.h  java_module_host_hl.h  java_module_host_manager.h
bindings/java/src/: java_module_host.c  java_module_host_hl.c  java_module_host_manager.c
bindings/java/tests/: CMakeLists.txt
bindings/java/tests/host_ut/: host_ut.c
bindings/java/tests/java_module_host_hl_unittests/: CMakeLists.txt
bindings/java/tests/java_module_host_unittests/: CMakeLists.txt  java_module_host_unittests.c
samples/: CMakeLists.txt
samples/java_sample/: CMakeLists.txt  log.txt
samples/java_sample/java_modules/IotHubAmqpModule/: pom.xml
samples/java_sample/java_modules/IotHubAmqpModule/src/main/java/: IotHubAmqpModule.java
samples/java_sample/java_modules/Printer/: pom.xml
samples/java_sample/java_modules/Sensor/: pom.xml
samples/java_sample/java_modules/Sensor/src/main/java/: Sensor.java
samples/java_sample/src/: java_sample_lin.json  java_sample_win.json  main.c
tools/: build.cmd  build.sh
